BUGFIX: Fix text bleeding outside of project box

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@ body {
   margin: 10px;
   padding: 10px;
   background-color: rgb(239, 203, 191);
-  max-width: 30%;
-  height: 300px;
+  min-width: 30%;
+  min-height: 300px;
 }
 .project p {
   text-align: center;
@@ -34,7 +34,7 @@ body {
 }
 
 .aboutMe {
-  padding: 10px 0 0 45%;
+  text-align: center;
 }
 
 .biography {
@@ -47,4 +47,8 @@ body {
   max-width: 300px;
   max-height: 300px;
   float: right;
+}
+
+#uw {
+  color:purple;
 }
